tp_y.output
Grammar

    0 $accept: Prog $end

    1 Prog: listClassObj block

    2 listClassObj: listClassObj ClassObj
    3             | %empty

    4 ClassObj: declClass
    5         | declObject

    6 declClass: CLASS ID '(' ListParamClause ')' extendsClause constructorClause IS classObjBlock

    7 declObject: OBJECT ID IS classObjBlock

    8 constructorClause: block
    9                  | %empty

   10 ListParamClause: ListParam
   11                | %empty

   12 ListParam: Param ',' ListParam
   13          | Param

   14 Param: Var ID ':' ID Init

   15 Var: VAR
   16    | %empty

   17 Init: AFF ExprRelop
   18     | %empty

   19 extendsClause: EXTENDS ID '(' ListArgClause ')'
   20              | %empty

   21 ListArgClause: ListArg
   22              | %empty

   23 ListArg: Arg ',' ListArg
   24        | Arg

   25 Arg: ExprRelop

   26 classObjBlock: '{' ListVarDef '}'

   27 ListVarDef: VarDef ListVarDef
   28           | %empty

   29 VarDef: declMethod
   30       | Champ

   31 declMethod: Override DEF ID '(' ListParamClause ')' ':' ID AFF ExprRelop
   32           | Override DEF ID '(' ListParamClause ')' ClassClause IS block

   33 Override: OVERRIDE
   34         | %empty

   35 ClassClause: ':' ID
   36            | %empty

   37 Champ: VAR ID ':' ID Init ';'

   38 CallMethod: Object '.' ID '(' ListArgClause ')'
   39           | '(' ExprRelop ')' '.' ID '(' ListArgClause ')'

   40 block: '{' ListInstClause '}'
   41      | '{' ListChamp IS ListInst '}'

   42 ListChamp: ListChamp Champ
   43          | Champ

   44 ListInstClause: ListInst
   45               | %empty

   46 ListInst: Inst ListInst
   47         | Inst

   48 Inst: ITE
   49     | block
   50     | RETURN ';'
   51     | cible ';'
   52     | ExprRelop ';'

   53 ITE: IF ExprRelop THEN Inst ELSE Inst

   54 cible: Object AFF ExprRelop

   55 Selection: Object '.' ID
   56          | '(' ExprRelop ')' '.' ID

   57 Object: Selection
   58       | CallMethod
   59       | Instanciation
   60       | CSTE
   61       | ID
   62       | Cast

   63 ExprRelop: Expr RELOP Expr
   64          | Expr

   65 Expr: Expr ADD Expr
   66     | Expr SUB Expr
   67     | Expr MUL Expr
   68     | Expr DIV Expr
   69     | Expr '&' Expr
   70     | Object
   71     | ADD CSTE
   72     | SUB CSTE
   73     | '(' ExprRelop ')'

   74 Instanciation: NEWV ID '(' ListArgClause ')'

   75 Cast: '(' ID Object ')'


Terminals, with rules where they appear

$end (0) 0
'&' (38) 69
'(' (40) 6 19 31 32 38 39 56 73 74 75
')' (41) 6 19 31 32 38 39 56 73 74 75
',' (44) 12 23
'.' (46) 38 39 55 56
':' (58) 14 31 35 37
';' (59) 37 50 51 52
'{' (123) 26 40 41
'}' (125) 26 40 41
error (256)
IS (258) 6 7 32 41
OBJECT (259) 7
CLASS (260) 6
VAR (261) 15 37
EXTENDS (262) 19
DEF (263) 31 32
OVERRIDE (264) 33
IF (265) 53
THEN (266) 53
ELSE (267) 53
AFF (268) 17 31 54
RETURN (269) 50
NEWV (270) 74
ADD (271) 65 71
SUB (272) 66 72
MUL (273) 67
DIV (274) 68
ID (275) 6 7 14 19 31 32 35 37 38 39 55 56 61 74 75
CSTE (276) 60 71 72
RELOP (277) 63
UNAIRE (278)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Prog (34)
    on left: 1, on right: 0
listClassObj (35)
    on left: 2 3, on right: 1 2
ClassObj (36)
    on left: 4 5, on right: 2
declClass (37)
    on left: 6, on right: 4
declObject (38)
    on left: 7, on right: 5
constructorClause (39)
    on left: 8 9, on right: 6
ListParamClause (40)
    on left: 10 11, on right: 6 31 32
ListParam (41)
    on left: 12 13, on right: 10 12
Param (42)
    on left: 14, on right: 12 13
Var (43)
    on left: 15 16, on right: 14
Init (44)
    on left: 17 18, on right: 14 37
extendsClause (45)
    on left: 19 20, on right: 6
ListArgClause (46)
    on left: 21 22, on right: 19 38 39 74
ListArg (47)
    on left: 23 24, on right: 21 23
Arg (48)
    on left: 25, on right: 23 24
classObjBlock (49)
    on left: 26, on right: 6 7
ListVarDef (50)
    on left: 27 28, on right: 26 27
VarDef (51)
    on left: 29 30, on right: 27
declMethod (52)
    on left: 31 32, on right: 29
Override (53)
    on left: 33 34, on right: 31 32
ClassClause (54)
    on left: 35 36, on right: 32
Champ (55)
    on left: 37, on right: 30 42 43
CallMethod (56)
    on left: 38 39, on right: 58
block (57)
    on left: 40 41, on right: 1 8 32 49
ListChamp (58)
    on left: 42 43, on right: 41 42
ListInstClause (59)
    on left: 44 45, on right: 40
ListInst (60)
    on left: 46 47, on right: 41 44 46
Inst (61)
    on left: 48 49 50 51 52, on right: 46 47 53
ITE (62)
    on left: 53, on right: 48
cible (63)
    on left: 54, on right: 51
Selection (64)
    on left: 55 56, on right: 57
Object (65)
    on left: 57 58 59 60 61 62, on right: 38 54 55 70 75
ExprRelop (66)
    on left: 63 64, on right: 17 25 31 39 52 53 54 56 73
Expr (67)
    on left: 65 66 67 68 69 70 71 72 73, on right: 63 64 65 66 67 68
    69
Instanciation (68)
    on left: 74, on right: 59
Cast (69)
    on left: 75, on right: 62


State 0

    0 $accept: . Prog $end

    $default  reduce using rule 3 (listClassObj)

    Prog          go to state 1
    listClassObj  go to state 2


State 1

    0 $accept: Prog . $end

    $end  shift, and go to state 3


State 2

    1 Prog: listClassObj . block
    2 listClassObj: listClassObj . ClassObj

    OBJECT  shift, and go to state 4
    CLASS   shift, and go to state 5
    '{'     shift, and go to state 6

    ClassObj    go to state 7
    declClass   go to state 8
    declObject  go to state 9
    block       go to state 10


State 3

    0 $accept: Prog $end .

    $default  accept


State 4

    7 declObject: OBJECT . ID IS classObjBlock

    ID  shift, and go to state 11


State 5

    6 declClass: CLASS . ID '(' ListParamClause ')' extendsClause constructorClause IS classObjBlock

    ID  shift, and go to state 12


State 6

   40 block: '{' . ListInstClause '}'
   41      | '{' . ListChamp IS ListInst '}'

    VAR     shift, and go to state 13
    IF      shift, and go to state 14
    RETURN  shift, and go to state 15
    NEWV    shift, and go to state 16
    '('     shift, and go to state 17
    '{'     shift, and go to state 6
    ADD     shift, and go to state 18
    SUB     shift, and go to state 19
    ID      shift, and go to state 20
    CSTE    shift, and go to state 21

    $default  reduce using rule 45 (ListInstClause)

    Champ           go to state 22
    CallMethod      go to state 23
    block           go to state 24
    ListChamp       go to state 25
    ListInstClause  go to state 26
    ListInst        go to state 27
    Inst            go to state 28
    ITE             go to state 29
    cible           go to state 30
    Selection       go to state 31
    Object          go to state 32
    ExprRelop       go to state 33
    Expr            go to state 34
    Instanciation   go to state 35
    Cast            go to state 36


State 7

    2 listClassObj: listClassObj ClassObj .

    $default  reduce using rule 2 (listClassObj)


State 8

    4 ClassObj: declClass .

    $default  reduce using rule 4 (ClassObj)


State 9

    5 ClassObj: declObject .

    $default  reduce using rule 5 (ClassObj)


State 10

    1 Prog: listClassObj block .

    $default  reduce using rule 1 (Prog)


State 11

    7 declObject: OBJECT ID . IS classObjBlock

    IS  shift, and go to state 37


State 12

    6 declClass: CLASS ID . '(' ListParamClause ')' extendsClause constructorClause IS classObjBlock

    '('  shift, and go to state 38


State 13

   37 Champ: VAR . ID ':' ID Init ';'

    ID  shift, and go to state 39


State 14

   53 ITE: IF . ExprRelop THEN Inst ELSE Inst

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    ExprRelop      go to state 41
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 15

   50 Inst: RETURN . ';'

    ';'  shift, and go to state 42


State 16

   74 Instanciation: NEWV . ID '(' ListArgClause ')'

    ID  shift, and go to state 43


State 17

   39 CallMethod: '(' . ExprRelop ')' '.' ID '(' ListArgClause ')'
   56 Selection: '(' . ExprRelop ')' '.' ID
   73 Expr: '(' . ExprRelop ')'
   75 Cast: '(' . ID Object ')'

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 44
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    ExprRelop      go to state 45
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 18

   71 Expr: ADD . CSTE

    CSTE  shift, and go to state 46


State 19

   72 Expr: SUB . CSTE

    CSTE  shift, and go to state 47


State 20

   61 Object: ID .

    $default  reduce using rule 61 (Object)


State 21

   60 Object: CSTE .

    $default  reduce using rule 60 (Object)


State 22

   43 ListChamp: Champ .

    $default  reduce using rule 43 (ListChamp)


State 23

   58 Object: CallMethod .

    $default  reduce using rule 58 (Object)


State 24

   49 Inst: block .

    $default  reduce using rule 49 (Inst)


State 25

   41 block: '{' ListChamp . IS ListInst '}'
   42 ListChamp: ListChamp . Champ

    IS   shift, and go to state 48
    VAR  shift, and go to state 13

    Champ  go to state 49


State 26

   40 block: '{' ListInstClause . '}'

    '}'  shift, and go to state 50


State 27

   44 ListInstClause: ListInst .

    $default  reduce using rule 44 (ListInstClause)


State 28

   46 ListInst: Inst . ListInst
   47         | Inst .

    IF      shift, and go to state 14
    RETURN  shift, and go to state 15
    NEWV    shift, and go to state 16
    '('     shift, and go to state 17
    '{'     shift, and go to state 6
    ADD     shift, and go to state 18
    SUB     shift, and go to state 19
    ID      shift, and go to state 20
    CSTE    shift, and go to state 21

    $default  reduce using rule 47 (ListInst)

    CallMethod     go to state 23
    block          go to state 24
    ListInst       go to state 51
    Inst           go to state 28
    ITE            go to state 29
    cible          go to state 30
    Selection      go to state 31
    Object         go to state 32
    ExprRelop      go to state 33
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 29

   48 Inst: ITE .

    $default  reduce using rule 48 (Inst)


State 30

   51 Inst: cible . ';'

    ';'  shift, and go to state 52


State 31

   57 Object: Selection .

    $default  reduce using rule 57 (Object)


State 32

   38 CallMethod: Object . '.' ID '(' ListArgClause ')'
   54 cible: Object . AFF ExprRelop
   55 Selection: Object . '.' ID
   70 Expr: Object .

    AFF  shift, and go to state 53
    '.'  shift, and go to state 54

    $default  reduce using rule 70 (Expr)


State 33

   52 Inst: ExprRelop . ';'

    ';'  shift, and go to state 55


State 34

   63 ExprRelop: Expr . RELOP Expr
   64          | Expr .
   65 Expr: Expr . ADD Expr
   66     | Expr . SUB Expr
   67     | Expr . MUL Expr
   68     | Expr . DIV Expr
   69     | Expr . '&' Expr

    '&'    shift, and go to state 56
    ADD    shift, and go to state 57
    SUB    shift, and go to state 58
    MUL    shift, and go to state 59
    DIV    shift, and go to state 60
    RELOP  shift, and go to state 61

    $default  reduce using rule 64 (ExprRelop)


State 35

   59 Object: Instanciation .

    $default  reduce using rule 59 (Object)


State 36

   62 Object: Cast .

    $default  reduce using rule 62 (Object)


State 37

    7 declObject: OBJECT ID IS . classObjBlock

    '{'  shift, and go to state 62

    classObjBlock  go to state 63


State 38

    6 declClass: CLASS ID '(' . ListParamClause ')' extendsClause constructorClause IS classObjBlock

    VAR  shift, and go to state 64

    ID        reduce using rule 16 (Var)
    $default  reduce using rule 11 (ListParamClause)

    ListParamClause  go to state 65
    ListParam        go to state 66
    Param            go to state 67
    Var              go to state 68


State 39

   37 Champ: VAR ID . ':' ID Init ';'

    ':'  shift, and go to state 69


State 40

   38 CallMethod: Object . '.' ID '(' ListArgClause ')'
   55 Selection: Object . '.' ID
   70 Expr: Object .

    '.'  shift, and go to state 54

    $default  reduce using rule 70 (Expr)


State 41

   53 ITE: IF ExprRelop . THEN Inst ELSE Inst

    THEN  shift, and go to state 70


State 42

   50 Inst: RETURN ';' .

    $default  reduce using rule 50 (Inst)


State 43

   74 Instanciation: NEWV ID . '(' ListArgClause ')'

    '('  shift, and go to state 71


State 44

   61 Object: ID .
   75 Cast: '(' ID . Object ')'

    NEWV  shift, and go to state 16
    '('   shift, and go to state 72
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    $default  reduce using rule 61 (Object)

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 73
    Instanciation  go to state 35
    Cast           go to state 36


State 45

   39 CallMethod: '(' ExprRelop . ')' '.' ID '(' ListArgClause ')'
   56 Selection: '(' ExprRelop . ')' '.' ID
   73 Expr: '(' ExprRelop . ')'

    ')'  shift, and go to state 74


State 46

   71 Expr: ADD CSTE .

    $default  reduce using rule 71 (Expr)


State 47

   72 Expr: SUB CSTE .

    $default  reduce using rule 72 (Expr)


State 48

   41 block: '{' ListChamp IS . ListInst '}'

    IF      shift, and go to state 14
    RETURN  shift, and go to state 15
    NEWV    shift, and go to state 16
    '('     shift, and go to state 17
    '{'     shift, and go to state 6
    ADD     shift, and go to state 18
    SUB     shift, and go to state 19
    ID      shift, and go to state 20
    CSTE    shift, and go to state 21

    CallMethod     go to state 23
    block          go to state 24
    ListInst       go to state 75
    Inst           go to state 28
    ITE            go to state 29
    cible          go to state 30
    Selection      go to state 31
    Object         go to state 32
    ExprRelop      go to state 33
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 49

   42 ListChamp: ListChamp Champ .

    $default  reduce using rule 42 (ListChamp)


State 50

   40 block: '{' ListInstClause '}' .

    $default  reduce using rule 40 (block)


State 51

   46 ListInst: Inst ListInst .

    $default  reduce using rule 46 (ListInst)


State 52

   51 Inst: cible ';' .

    $default  reduce using rule 51 (Inst)


State 53

   54 cible: Object AFF . ExprRelop

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    ExprRelop      go to state 76
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 54

   38 CallMethod: Object '.' . ID '(' ListArgClause ')'
   55 Selection: Object '.' . ID

    ID  shift, and go to state 77


State 55

   52 Inst: ExprRelop ';' .

    $default  reduce using rule 52 (Inst)


State 56

   69 Expr: Expr '&' . Expr

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    Expr           go to state 78
    Instanciation  go to state 35
    Cast           go to state 36


State 57

   65 Expr: Expr ADD . Expr

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    Expr           go to state 79
    Instanciation  go to state 35
    Cast           go to state 36


State 58

   66 Expr: Expr SUB . Expr

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    Expr           go to state 80
    Instanciation  go to state 35
    Cast           go to state 36


State 59

   67 Expr: Expr MUL . Expr

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    Expr           go to state 81
    Instanciation  go to state 35
    Cast           go to state 36


State 60

   68 Expr: Expr DIV . Expr

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    Expr           go to state 82
    Instanciation  go to state 35
    Cast           go to state 36


State 61

   63 ExprRelop: Expr RELOP . Expr

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    Expr           go to state 83
    Instanciation  go to state 35
    Cast           go to state 36


State 62

   26 classObjBlock: '{' . ListVarDef '}'

    VAR       shift, and go to state 13
    OVERRIDE  shift, and go to state 84

    DEF       reduce using rule 34 (Override)
    $default  reduce using rule 28 (ListVarDef)

    ListVarDef  go to state 85
    VarDef      go to state 86
    declMethod  go to state 87
    Override    go to state 88
    Champ       go to state 89


State 63

    7 declObject: OBJECT ID IS classObjBlock .

    $default  reduce using rule 7 (declObject)


State 64

   15 Var: VAR .

    $default  reduce using rule 15 (Var)


State 65

    6 declClass: CLASS ID '(' ListParamClause . ')' extendsClause constructorClause IS classObjBlock

    ')'  shift, and go to state 90


State 66

   10 ListParamClause: ListParam .

    $default  reduce using rule 10 (ListParamClause)


State 67

   12 ListParam: Param . ',' ListParam
   13          | Param .

    ','  shift, and go to state 91

    $default  reduce using rule 13 (ListParam)


State 68

   14 Param: Var . ID ':' ID Init

    ID  shift, and go to state 92


State 69

   37 Champ: VAR ID ':' . ID Init ';'

    ID  shift, and go to state 93


State 70

   53 ITE: IF ExprRelop THEN . Inst ELSE Inst

    IF      shift, and go to state 14
    RETURN  shift, and go to state 15
    NEWV    shift, and go to state 16
    '('     shift, and go to state 17
    '{'     shift, and go to state 6
    ADD     shift, and go to state 18
    SUB     shift, and go to state 19
    ID      shift, and go to state 20
    CSTE    shift, and go to state 21

    CallMethod     go to state 23
    block          go to state 24
    Inst           go to state 94
    ITE            go to state 29
    cible          go to state 30
    Selection      go to state 31
    Object         go to state 32
    ExprRelop      go to state 33
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 71

   74 Instanciation: NEWV ID '(' . ListArgClause ')'

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 20
    CSTE  shift, and go to state 21

    $default  reduce using rule 22 (ListArgClause)

    ListArgClause  go to state 95
    ListArg        go to state 96
    Arg            go to state 97
    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    ExprRelop      go to state 98
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 72

   39 CallMethod: '(' . ExprRelop ')' '.' ID '(' ListArgClause ')'
   56 Selection: '(' . ExprRelop ')' '.' ID
   75 Cast: '(' . ID Object ')'

    NEWV  shift, and go to state 16
    '('   shift, and go to state 17
    ADD   shift, and go to state 18
    SUB   shift, and go to state 19
    ID    shift, and go to state 44
    CSTE  shift, and go to state 21

    CallMethod     go to state 23
    Selection      go to state 31
    Object         go to state 40
    ExprRelop      go to state 99
    Expr           go to state 34
    Instanciation  go to state 35
    Cast           go to state 36


State 73

   38 CallMethod: Object . '.' ID '(' ListArgClause ')'
   55 Selection: Object . '.' ID
   75 Cast: '(' ID Object . ')'

    ')'  shift, and go to state 100
    '.'  shift, and go to state 54


State 74

   39 CallMethod: '(' ExprRelop ')' . '.' ID '(' ListArgClause ')'
   56 Selection: '(' ExprRelop ')' . '.' ID
   73 Expr: '(' ExprRelop ')' .

    '.'  shift, and go to state 101

    $default  reduce using rule 73 (Expr)


State 75

   41 block: '{' ListChamp IS ListInst . '}'

    '}'  shift, and go to state 102


State 76

   54 cible: Object AFF ExprRelop .

    $default  reduce using rule 54 (cible)


State 77

   38 CallMethod: Object '.' ID . '(' ListArgClause ')'
   55 Selection: Object '.' ID .

    '('  shift, and go to state 103

    $default  reduce using rule 55 (Selection)


State 78

   65 Expr: Expr . ADD Expr
   66     | Expr . SUB Expr
   67     | Expr . MUL Expr
   68     | Expr . DIV Expr
   69     | Expr . '&' Expr
   69     | Expr '&' Expr .

    ADD  shift, and go to state 57
    SUB  shift, and go to state 58
    MUL  shift, and go to state 59
    DIV  shift, and go to state 60

    $default  reduce using rule 69 (Expr)


State 79

   65 Expr: Expr . ADD Expr
   65     | Expr ADD Expr .
   66     | Expr . SUB Expr
   67     | Expr . MUL Expr
   68     | Expr . DIV Expr
   69     | Expr . '&' Expr

    MUL  shift, and go to state 59
    DIV  shift, and go to state 60

    $default  reduce using rule 65 (Expr)


State 80

   65 Expr: Expr . ADD Expr
   66     | Expr . SUB Expr
   66     | Expr SUB Expr .
   67     | Expr . MUL Expr
   68     | Expr . DIV Expr
   69     | Expr . '&' Expr

    MUL  shift, and go to state 59
    DIV  shift, and go to state 60

    $default  reduce using rule 66 (Expr)


State 81

   65 Expr: Expr . ADD Expr
   66     | Expr . SUB Expr
   67     | Expr . MUL Expr
   67     | Expr MUL Expr .
   68     | Expr . DIV Expr
   69     | Expr . '&' Expr

    $default  reduce using rule 67 (Expr)


State 82

   65 Expr: Expr . ADD Expr
   66     | Expr . SUB Expr
   67     | Expr . MUL Expr
   68     | Expr . DIV Expr
   68     | Expr DIV Expr .
   69     | Expr . '&' Expr

    $default  reduce using rule 68 (Expr)


State 83

   63 ExprRelop: Expr RELOP Expr .
   65 Expr: Expr . ADD Expr
   66     | Expr . SUB Expr
   67     | Expr . MUL Expr
   68     | Expr . DIV Expr
   69     | Expr . '&' Expr

    '&'  shift, and go to state 56
    ADD  shift, and go to state 57
    SUB  shift, and go to state 58
    MUL  shift, and go to state 59
    DIV  shift, and go to state 60

    $default  reduce using rule 63 (ExprRelop)


State 84

   33 Override: OVERRIDE .

    $default  reduce using rule 33 (Override)


State 85

   26 classObjBlock: '{' ListVarDef . '}'

    '}'  shift, and go to state 104


State 86

   27 ListVarDef: VarDef . ListVarDef

    VAR       shift, and go to state 13
    OVERRIDE  shift, and go to state 84

    DEF       reduce using rule 34 (Override)
    $default  reduce using rule 28 (ListVarDef)

    ListVarDef  go to state 105
    VarDef      go to state 86
    declMethod  go to state 87
    Override    go to state 88
    Champ       go to state 89


State 87

   29 VarDef: declMethod .

    $default  reduce using rule 29 (VarDef)


State 88

   31 declMethod: Override . DEF ID '(' ListParamClause ')' ':' ID AFF ExprRelop
   32           | Override . DEF ID '(' ListParamClause ')' ClassClause IS block

    DEF  shift, and go to state 106


State 89

   30 VarDef: Champ .

    $default  reduce using rule 30 (VarDef)


State 90
